[tool.poetry]
name = "url-check"
version = "0.1.0"
description = ""
authors = ["Байбак Кирилл lin <zloifox@gmail.com>"]
readme = "README.md"
packages = [{include = "cli"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pytest = "^7.2.0"
coverage = "^6.5.0"
aiohttp = "^3.8.3"
pytest-asyncio = "^0.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
